tests/machine/x/cpp/typed_let.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	auto y;
	(cout << y);
	return 0;
}
